

NEW FEATURES

 * "Show language choice" configuration not readed at login page

 * Advanced filters management from REST web services

 * Notification of errors by email

 * Performance improvements to queries

 * Preselection of workflow activities

 * Simple filter support for processes routes

 * New GetCardPosition management

 * Client performance improvements


FIXES

 * Software version string visually displayed in half on login panel

 * Selected tab reset on class change in administration Classes module

 * Classes geographical attributes tab no zoom levels validation

 * Selected tab reset on accordion selection change in administration modules

 * UI not loading on Tomcat 8.0.36 (latest)

 * Double email delete server call on create/edit window close

 * CreateModifyCard widget with null Reference cannot be configured

 * History tab rows doesn't display relation attributes

 * Error when trying to get cards from a superclass when there are row privileges defined on a subclass

 * Wrong selection when accessing closed processes from url

 * Task manager UI behaviour errors

 * "Privileged" status for user invalidates "impersonate" operation of WorkflowAPI

 * Tab details errors whith simple class ForeignKey as source

 * ForeignKey fields store URL errors

 * Widget buttons duplication while using direct routes on process instance with Firefox

 * Error while saving a search filter without selecting a default group

 * Wrong privileges management for reports from REST web services





CMDBuild 2.4.1 (released 2016/06/16)


NEW FEATURES

 * Single authentication system used by all web service

 * Added Czech translation

 * Keep sync checkbox checked by default on administration email template form

 * Locks related to a user session must be removed when the session is closed or expired

 * Single execution of a task without scheduling

 * Impersonate another user and/or group using workflow API
