@@ -1,30 +1,34 @@
 package org.cmdbuild.dao.function;
 
+import static com.google.common.base.Splitter.on;
 import static com.google.common.collect.FluentIterable.from;
-import static com.google.common.collect.Iterables.addAll;
-import static java.util.Arrays.asList;
+import static com.google.common.collect.Sets.newHashSet;
+import static java.util.Collections.emptyList;
+import static java.util.Collections.emptyMap;
+import static java.util.Collections.unmodifiableList;
+import static org.apache.commons.lang3.ObjectUtils.defaultIfNull;
 import static org.apache.commons.lang3.StringUtils.defaultString;
 import static org.cmdbuild.dao.entrytype.DBIdentifier.fromName;
 
 import java.util.ArrayList;
-import java.util.Collections;
+import java.util.HashMap;
 import java.util.List;
-import java.util.Set;
+import java.util.Map;
 
 import org.apache.commons.lang3.Validate;
+import org.cmdbuild.common.collect.ChainablePutMap;
 import org.cmdbuild.dao.DBTypeObject;
 import org.cmdbuild.dao.entrytype.CMIdentifier;
 import org.cmdbuild.dao.entrytype.DBEntryType.EntryTypeMetadata;
 import org.cmdbuild.dao.entrytype.attributetype.CMAttributeType;
 
 import com.google.common.base.Function;
-import com.google.common.collect.Sets;
 
 public class DBFunction extends DBTypeObject implements CMFunction {
 
 	public static class FunctionMetadata extends EntryTypeMetadata {
 
-		private static Function<String, Category> STRING_TO_CATEGORY = new Function<String, Category>() {
+		private static final Function<String, Category> STRING_TO_CATEGORY = new Function<String, Category>() {
 
 			@Override
 			public Category apply(final String input) {
@@ -34,14 +38,37 @@ public class DBFunction extends DBTypeObject implements CMFunction {
 		};
 
 		public static final String CATEGORIES = BASE_NS + "categories";
+		public static final String MASTERTABLE = BASE_NS + "mastertable";
+		public static final String TAGS = BASE_NS + "tags";
 
-		private static final String CATEGORIES_SEPARATOR = ",";
+		private static final String COMMA_SEPARATOR = ",";
 
 		public Iterable<Category> getCategories() {
-			return from(asList(defaultString(get(CATEGORIES)).split(CATEGORIES_SEPARATOR))) //
-					.transform(STRING_TO_CATEGORY);
-
+			return from(on(COMMA_SEPARATOR) //
+					.trimResults() //
+					.omitEmptyStrings() //
+					.splitToList(defaultString(get(CATEGORIES)))) //
+							.transform(STRING_TO_CATEGORY);
 		}
+
+		public Map<String, Object> getMetadata() {
+			return ChainablePutMap.of(new HashMap<String, Object>()) //
+					.chainablePut(CATEGORIES, newHashSet(getCategories())) //
+					.chainablePut(MASTERTABLE, getMasterTable()) //
+					.chainablePut(TAGS, newHashSet(getTags()));
+		}
+
+		private String getMasterTable() {
+			return defaultString(get(MASTERTABLE));
+		}
+
+		private Iterable<String> getTags() {
+			return from(on(COMMA_SEPARATOR) //
+					.trimResults() //
+					.omitEmptyStrings() //
+					.split(defaultString(get(TAGS))));
+		}
+
 	}
 
 	private static class DBFunctionParameter implements CMFunctionParameter {
@@ -68,6 +95,9 @@ public class DBFunction extends DBTypeObject implements CMFunction {
 
 	}
 
+	private static final Iterable<Category> NO_CATEGORIES = emptyList();
+	private static final Map<String, Object> NO_METADATA = emptyMap();
+
 	private final List<CMFunctionParameter> inputParameters;
 	private final List<CMFunctionParameter> outputParameters;
 
@@ -76,7 +106,8 @@ public class DBFunction extends DBTypeObject implements CMFunction {
 
 	private final boolean returnsSet;
 
-	private final Set<Category> categories;
+	private Iterable<Category> categories;
+	private Map<String, Object> metadata;
 
 	public DBFunction(final String name, final Long id, final boolean returnsSet) {
 		this(fromName(name), id, returnsSet);
@@ -84,12 +115,13 @@ public class DBFunction extends DBTypeObject implements CMFunction {
 
 	public DBFunction(final CMIdentifier identifier, final Long id, final boolean returnsSet) {
 		super(identifier, id);
-		this.inputParameters = new ArrayList<CMFunctionParameter>();
-		this.unmodifiableInputParameters = Collections.unmodifiableList(inputParameters);
-		this.outputParameters = new ArrayList<CMFunctionParameter>();
-		this.unmodifiableOutputParameters = Collections.unmodifiableList(outputParameters);
+		this.inputParameters = new ArrayList<>();
+		this.unmodifiableInputParameters = unmodifiableList(inputParameters);
+		this.outputParameters = new ArrayList<>();
+		this.unmodifiableOutputParameters = unmodifiableList(outputParameters);
 		this.returnsSet = returnsSet;
-		this.categories = Sets.newHashSet();
+		this.categories = NO_CATEGORIES;
+		this.metadata = NO_METADATA;
 	}
 
 	@Override
@@ -120,8 +152,17 @@ public class DBFunction extends DBTypeObject implements CMFunction {
 		return categories;
 	}
 
-	public void addCategories(final Iterable<Category> categories) {
-		addAll(this.categories, categories);
+	public void setCategories(final Iterable<Category> categories) {
+		this.categories = defaultIfNull(categories, NO_CATEGORIES);
+	}
+
+	@Override
+	public Map<String, Object> getMetadata() {
+		return metadata;
+	}
+
+	public void setMetadata(final Map<String, Object> metadata) {
+		this.metadata = defaultIfNull(metadata, NO_METADATA);
 	}
 
 }
