@@ -1,5 +1,10 @@
 package org.cmdbuild.service.rest.v2.model;
 
+import static org.cmdbuild.service.rest.v2.constants.Serialization.METADATA;
+
+import java.util.Map;
+
+import javax.xml.bind.annotation.XmlElement;
 import javax.xml.bind.annotation.XmlRootElement;
 
 import org.apache.commons.lang3.builder.EqualsBuilder;
@@ -8,8 +13,19 @@ import org.apache.commons.lang3.builder.HashCodeBuilder;
 @XmlRootElement
 public class FunctionWithFullDetails extends FunctionWithBasicDetails {
 
+	private Map<String, Object> metadata;
+
 	FunctionWithFullDetails() {
 		// package visibility
+	}
+
+	@XmlElement(name = METADATA, nillable = true)
+	public Map<String, Object> getMetadata() {
+		return metadata;
+	}
+
+	void setMetadata(final Map<String, Object> metadata) {
+		this.metadata = metadata;
 	}
 
 	@Override
@@ -24,6 +40,7 @@ public class FunctionWithFullDetails extends FunctionWithBasicDetails {
 
 		final FunctionWithFullDetails other = FunctionWithFullDetails.class.cast(obj);
 		return super.doEquals(obj) && new EqualsBuilder() //
+				.append(this.metadata, other.metadata) //
 				.isEquals();
 	}
 
@@ -31,6 +48,7 @@ public class FunctionWithFullDetails extends FunctionWithBasicDetails {
 	protected int doHashCode() {
 		return new HashCodeBuilder() //
 				.append(super.doHashCode()) //
+				.append(metadata) //
 				.toHashCode();
 	}
 
