@@ -2,6 +2,7 @@ package unit.cxf;
 
 import static com.google.common.collect.Iterables.get;
 import static java.util.Arrays.asList;
+import static java.util.Collections.emptyMap;
 import static org.cmdbuild.service.rest.v2.model.Models.newAttribute;
 import static org.cmdbuild.service.rest.v2.model.Models.newFunctionWithBasicDetails;
 import static org.cmdbuild.service.rest.v2.model.Models.newFunctionWithFullDetails;
@@ -12,8 +13,12 @@ import static org.mockito.Mockito.doReturn;
 import static org.mockito.Mockito.doThrow;
 import static org.mockito.Mockito.mock;
 
+import java.util.HashMap;
+import java.util.Map;
+
 import javax.ws.rs.WebApplicationException;
 
+import org.cmdbuild.common.collect.ChainablePutMap;
 import org.cmdbuild.dao.entrytype.attributetype.BooleanAttributeType;
 import org.cmdbuild.dao.entrytype.attributetype.CMAttributeType;
 import org.cmdbuild.dao.entrytype.attributetype.IntegerAttributeType;
@@ -69,11 +74,12 @@ public class CxfFunctionsTest {
 		// then
 		assertThat(response.getMetadata().getTotal(), equalTo(3L));
 		assertThat(response.getElements(), hasSize(3));
-		assertThat(get(response.getElements(), 0), equalTo(newFunctionWithBasicDetails() //
-				.withId(_1.getId()) //
-				.withName(_1.getName()) //
-				.withDescription(_1.getName()) //
-				.build()));
+		assertThat(get(response.getElements(), 0),
+				equalTo(newFunctionWithBasicDetails() //
+						.withId(_1.getId()) //
+						.withName(_1.getName()) //
+						.withDescription(_1.getName()) //
+						.build()));
 		assertThat(get(response.getElements(), 1).getId(), equalTo(_2.getId()));
 		assertThat(get(response.getElements(), 2).getId(), equalTo(_3.getId()));
 	}
@@ -88,25 +94,27 @@ public class CxfFunctionsTest {
 				.when(dataView).findAllFunctions();
 
 		// when
-		final ResponseMultiple<FunctionWithBasicDetails> response = underTest.readAll(null, null, "" //
-				+ "{" //
-				+ "	\"attribute\": {" //
-				+ "		\"simple\": {" //
-				+ "			\"attribute\": \"name\"," //
-				+ "			\"operator\": \"equal\"," //
-				+ "			\"value\": [\"2\"]" //
-				+ "		}" //
-				+ "	}" //
-				+ "}");
+		final ResponseMultiple<FunctionWithBasicDetails> response = underTest.readAll(null, null,
+				"" //
+						+ "{" //
+						+ "	\"attribute\": {" //
+						+ "		\"simple\": {" //
+						+ "			\"attribute\": \"name\"," //
+						+ "			\"operator\": \"equal\"," //
+						+ "			\"value\": [\"2\"]" //
+						+ "		}" //
+						+ "	}" //
+						+ "}");
 
 		// then
 		assertThat(response.getMetadata().getTotal(), equalTo(1L));
 		assertThat(response.getElements(), hasSize(1));
-		assertThat(get(response.getElements(), 0), equalTo(newFunctionWithBasicDetails() //
-				.withId(_2.getId()) //
-				.withName(_2.getName()) //
-				.withDescription(_2.getName()) //
-				.build()));
+		assertThat(get(response.getElements(), 0),
+				equalTo(newFunctionWithBasicDetails() //
+						.withId(_2.getId()) //
+						.withName(_2.getName()) //
+						.withDescription(_2.getName()) //
+						.build()));
 	}
 
 	@Test
@@ -126,11 +134,12 @@ public class CxfFunctionsTest {
 		// then
 		assertThat(response.getMetadata().getTotal(), equalTo(5L));
 		assertThat(response.getElements(), hasSize(2));
-		assertThat(get(response.getElements(), 0), equalTo(newFunctionWithBasicDetails() //
-				.withId(_2.getId()) //
-				.withName(_2.getName()) //
-				.withDescription(_2.getName()) //
-				.build()));
+		assertThat(get(response.getElements(), 0),
+				equalTo(newFunctionWithBasicDetails() //
+						.withId(_2.getId()) //
+						.withName(_2.getName()) //
+						.withDescription(_2.getName()) //
+						.build()));
 		assertThat(get(response.getElements(), 1).getId(), equalTo(_3.getId()));
 	}
 
@@ -164,7 +173,10 @@ public class CxfFunctionsTest {
 	public void functionDetailsReturned() throws Exception {
 		// given
 		final CMFunction _1 = function(1L);
-		final CMFunction _2 = function(2L);
+		final CMFunction _2 = function(2L,
+				ChainablePutMap.of(new HashMap<String, Object>()) //
+						.chainablePut("foo", "bar") //
+						.chainablePut("bar", "baz"));
 		final CMFunction _3 = function(3L);
 		doReturn(asList(_1, _2, _3)) //
 				.when(dataView).findAllFunctions();
@@ -173,11 +185,15 @@ public class CxfFunctionsTest {
 		final ResponseSingle<FunctionWithFullDetails> response = underTest.read(2L);
 
 		// then
-		assertThat(response.getElement(), equalTo(newFunctionWithFullDetails() //
-				.withId(_2.getId()) //
-				.withName(_2.getName()) //
-				.withDescription(_2.getName()) //
-				.build()));
+		assertThat(response.getElement(),
+				equalTo(newFunctionWithFullDetails() //
+						.withId(_2.getId()) //
+						.withName(_2.getName()) //
+						.withDescription(_2.getName()) //
+						.withMetadata(ChainablePutMap.of(new HashMap<String, Object>()) //
+								.chainablePut("foo", "bar") //
+								.chainablePut("bar", "baz")) //
+						.build()));
 	}
 
 	@Test(expected = RuntimeException.class)
@@ -226,14 +242,15 @@ public class CxfFunctionsTest {
 		// then
 		assertThat(response.getMetadata().getTotal(), equalTo(3L));
 		assertThat(response.getElements(), hasSize(3));
-		assertThat(get(response.getElements(), 0), equalTo(newAttribute() //
-				.withId(foo.getName()) //
-				.withName(foo.getName()) //
-				.withDescription(foo.getName()) //
-				.withType("text") //
-				.thatIsActive(true) //
-				.withIndex(0L) //
-				.build()));
+		assertThat(get(response.getElements(), 0),
+				equalTo(newAttribute() //
+						.withId(foo.getName()) //
+						.withName(foo.getName()) //
+						.withDescription(foo.getName()) //
+						.withType("text") //
+						.thatIsActive(true) //
+						.withIndex(0L) //
+						.build()));
 		assertThat(get(response.getElements(), 1).getId(), equalTo("bar"));
 		assertThat(get(response.getElements(), 2).getId(), equalTo("baz"));
 	}
@@ -258,14 +275,15 @@ public class CxfFunctionsTest {
 		// then
 		assertThat(response.getMetadata().getTotal(), equalTo(3L));
 		assertThat(response.getElements(), hasSize(1));
-		assertThat(get(response.getElements(), 0), equalTo(newAttribute() //
-				.withId(baz.getName()) //
-				.withName(baz.getName()) //
-				.withDescription(baz.getName()) //
-				.withType("boolean") //
-				.thatIsActive(true) //
-				.withIndex(0L) //
-				.build()));
+		assertThat(get(response.getElements(), 0),
+				equalTo(newAttribute() //
+						.withId(baz.getName()) //
+						.withName(baz.getName()) //
+						.withDescription(baz.getName()) //
+						.withType("boolean") //
+						.thatIsActive(true) //
+						.withIndex(0L) //
+						.build()));
 	}
 
 	@Test(expected = RuntimeException.class)
@@ -314,14 +332,15 @@ public class CxfFunctionsTest {
 		// then
 		assertThat(response.getMetadata().getTotal(), equalTo(3L));
 		assertThat(response.getElements(), hasSize(3));
-		assertThat(get(response.getElements(), 0), equalTo(newAttribute() //
-				.withId(foo.getName()) //
-				.withName(foo.getName()) //
-				.withDescription(foo.getName()) //
-				.withType("text") //
-				.thatIsActive(true) //
-				.withIndex(0L) //
-				.build()));
+		assertThat(get(response.getElements(), 0),
+				equalTo(newAttribute() //
+						.withId(foo.getName()) //
+						.withName(foo.getName()) //
+						.withDescription(foo.getName()) //
+						.withType("text") //
+						.thatIsActive(true) //
+						.withIndex(0L) //
+						.build()));
 		assertThat(get(response.getElements(), 1).getId(), equalTo("bar"));
 		assertThat(get(response.getElements(), 2).getId(), equalTo("baz"));
 	}
@@ -346,14 +365,15 @@ public class CxfFunctionsTest {
 		// then
 		assertThat(response.getMetadata().getTotal(), equalTo(3L));
 		assertThat(response.getElements(), hasSize(1));
-		assertThat(get(response.getElements(), 0), equalTo(newAttribute() //
-				.withId(baz.getName()) //
-				.withName(baz.getName()) //
-				.withDescription(baz.getName()) //
-				.withType("boolean") //
-				.thatIsActive(true) //
-				.withIndex(0L) //
-				.build()));
+		assertThat(get(response.getElements(), 0),
+				equalTo(newAttribute() //
+						.withId(baz.getName()) //
+						.withName(baz.getName()) //
+						.withDescription(baz.getName()) //
+						.withType("boolean") //
+						.thatIsActive(true) //
+						.withIndex(0L) //
+						.build()));
 	}
 
 	/*
@@ -361,11 +381,17 @@ public class CxfFunctionsTest {
 	 */
 
 	private CMFunction function(final Long id) {
+		return function(id, emptyMap());
+	}
+
+	private CMFunction function(final Long id, final Map<String, Object> metadata) {
 		final CMFunction output = mock(CMFunction.class, id.toString());
 		doReturn(id) //
 				.when(output).getId();
 		doReturn(id.toString()) //
 				.when(output).getName();
+		doReturn(metadata) //
+				.when(output).getMetadata();
 		return output;
 	}
 
