@@ -19,6 +19,8 @@ NEW FEATURES
 
  * Client performance improvements
 
+ * Metadata for functions through REST interface
+
 
 FIXES
 
